--- a/src/njk/templates/partials/component/card-icons.njk
+++ b/src/njk/templates/partials/component/card-icons.njk
@@ -1,14 +1,27 @@
 <div class="card-icons">
-    {% for i in range(0,3) %}
     <a href="#" class="card-icons__link">
         <img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
-        <div class="card-icons__text">Card Icon Title</div>
+        <div class="card-icons__text">Certificate Programs</div>
     </a>
-
     <a href="#" class="card-icons__link">
         <img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
-        <div class="card-icons__text">Slightly Longer Card Icon Title</div>
+        <div class="card-icons__text">Individual Courses</div>
     </a>
-    {% endfor %}
+	<a href="#" class="card-icons__link">
+        <img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+        <div class="card-icons__text">Webinars and Info Sessions</div>
+    </a>
+	<a href="#" class="card-icons__link">
+        <img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
+        <div class="card-icons__text">OLLI (ages 50+)</div>
+    </a>
+	<a href="#" class="card-icons__link">
+        <img src="{{ includePath }}images/icons/book-w.svg" alt="" class="img-fluid card-icons__icon" />
+        <div class="card-icons__text">Corporate Training</div>
+    </a>
+	<a href="#" class="card-icons__link">
+        <img src="{{ includePath }}images/icons/book-b.svg" alt="" class="img-fluid card-icons__icon" />
+        <div class="card-icons__text">Military Service Members</div>
+    </a>
 </div>
 <!-- /.card-icons -->
