--- a/src/njk/templates/partials/component/card-links.njk
+++ b/src/njk/templates/partials/component/card-links.njk
@@ -1,30 +1,79 @@
 <div class="card-links">
 
     <div class="row">
-        {% for i in range(0,3) %}
         <div class="col-sm-6 col-lg-4 mb-5">
             <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
-                <h3 class="card-links__title">Short title</h3>
+                <h3 class="card-links__title">Certificate Programs</h3>
                 <ul class="card-links__list">
-                    {% for i in range(0,4) %}
-                    <li>List item here</li>
-                    <li>This item has a longer string of text</li>
-                    {% endfor %}
+					<li>Big Data</li>
+					<li>Business Intelligence</li>
+					<li>Health Coach</li>
+					<li>Web Technologies</li>
+					<li>Paralegal</li>
                 </ul>
             </a>
         </div><!-- /.col-md-4 -->
-        <div class="col-sm-6 col-lg-4 mb-5">
+		<div class="col-sm-6 col-lg-4 mb-5">
             <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
-                <h3 class="card-links__title">This item has a much longer title</h3>
+                <h3 class="card-links__title">Management and Supervision</h3>
                 <ul class="card-links__list">
-                    {% for i in range(0,3) %}
-                    <li>List item here</li>
-                    <li>This item has a longer string of text</li>
-                    {% endfor %}
+                    <li>Essential of Human Resource (HR) Management</li>
+					<li>Coaching Effectively</li>
+					<li>Delegating Effectively</li>
+					<li>Dealing with Difficult People</li>
+					<li>Transformational Leadership</li>
                 </ul>
             </a>
         </div><!-- /.col-md-4 -->
-        {% endfor %}
+		<div class="col-sm-6 col-lg-4 mb-5">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+                <h3 class="card-links__title">Lean Six Sigma and Project Management</h3>
+                <ul class="card-links__list">
+                    <li>Lean Six Sigma White Belt</li>
+					<li>Lean Six Sigma Green Belt</li>
+					<li>Intro to Project Management</li>
+					<li>Project Management for Health Care</li>
+					<li>Project Management: Agile and Scrum Essentials</li>
+                </ul>
+            </a>
+        </div><!-- /.col-md-4 -->
+		<div class="col-sm-6 col-lg-4 mb-5">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+                <h3 class="card-links__title">IT, Design and Development</h3>
+                <ul class="card-links__list">
+                    <li>SQL Level 1</li>
+					<li>Foundations of Graphic Design and Production</li>
+					<li>Adobe Photoshop</li>
+					<li>HTML and CSS</li>
+					<li>Email Marketing Strategy</li>
+                </ul>
+            </a>
+        </div><!-- /.col-md-4 -->
+		<div class="col-sm-6 col-lg-4 mb-5">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+                <h3 class="card-links__title">Test Preparation</h3>
+                <ul class="card-links__list">
+                    <li>GRE</li>
+					<li>GMAT</li>
+					<li>LSAT</li>
+					<li>MCAT</li>
+					<li>Project Management (PMP) Exam</li>
+					<li>PHR/SPHR Certification Review</li>
+                </ul>
+            </a>
+        </div><!-- /.col-md-4 -->
+		<div class="col-sm-6 col-lg-4 mb-5">
+            <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+                <h3 class="card-links__title">Fine Arts</h3>
+                <ul class="card-links__list">
+                    <li>Digital Photography 1</li>
+					<li>Essentials of Creative Writing</li>
+					<li>Reinvention Workshop</li>
+					<li>Intro to Screenwriting</li>
+					<li>Poetry Workshop</li>
+                </ul>
+            </a>
+        </div><!-- /.col-md-4 -->
 
     </div>
     <!-- /.row -->
