--- a/src/njk/templates/partials/component/carousel-testimonial-photos.njk
+++ b/src/njk/templates/partials/component/carousel-testimonial-photos.njk
@@ -1,5 +1,5 @@
 <div id="carouselTestimonialPhotos" class="carousel slide carousel-testimonial-photos" data-ride="carousel">
-    
+
     <ol class="carousel-indicators">
         <li data-target="#carouselTestimonialPhotos" data-slide-to="0" class="active"></li>
         <li data-target="#carouselTestimonialPhotos" data-slide-to="1"></li>
@@ -15,18 +15,42 @@
                         <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
                             <div class="carousel__thumb">
                                 <figure class="image image-1by1">
-                                    <img src="https://placehold.it/300" alt="placeholder">
+                                    <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                                 </figure>
                             </div>
                         </div>
                         <!-- /.col-md-4 col-lg-3 -->
                         <div class="col-md-8 col-lg-9">
                             <div class="wysiwyg">
-                                <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
+                                <p>“I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”</p>
                             </div>
                             <!-- /.wysiwyg -->
-                            <div class="carousel-testimonial__name">John H. Smith</div>
-                            <div class="carousel-testimonial__title">Creative Artist</div>
+                            <div class="carousel-testimonial__name">Alex Hvostik</div>
+                            <div class="carousel-testimonial__title">Business Intelligence</div>
+                        </div>
+                        <!-- /.col-md-8 col-lg-9 -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.carousel-item -->
+				
+				<div class="carousel-item">
+                    <div class="row">
+                        <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
+                            <div class="carousel__thumb">
+                                <figure class="image image-1by1">
+                                    <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
+                                </figure>
+                            </div>
+                        </div>
+                        <!-- /.col-md-4 col-lg-3 -->
+                        <div class="col-md-8 col-lg-9">
+                            <div class="wysiwyg">
+                                <p>“I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”</p>
+                            </div>
+                            <!-- /.wysiwyg -->
+                            <div class="carousel-testimonial__name">Alex Hvostik</div>
+                            <div class="carousel-testimonial__title">Business Intelligence</div>
                         </div>
                         <!-- /.col-md-8 col-lg-9 -->
                     </div>
@@ -34,47 +58,23 @@
                 </div>
                 <!-- /.carousel-item -->
 
-                <div class="carousel-item">
+				<div class="carousel-item">
                     <div class="row">
                         <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
                             <div class="carousel__thumb">
                                 <figure class="image image-1by1">
-                                    <img src="https://unsplash.it/300?random" alt="placeholder">
+                                    <img src="{{ includePath }}images/placeholders/alex-hvostik.jpg" alt="placeholder">
                                 </figure>
                             </div>
                         </div>
                         <!-- /.col-md-4 col-lg-3 -->
                         <div class="col-md-8 col-lg-9">
                             <div class="wysiwyg">
-                                <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
+                                <p>“I’ve gotten a lot of success out of the program. I landed a new job while in the program. So, I would highly recommend this course to others.”</p>
                             </div>
                             <!-- /.wysiwyg -->
-                            <div class="carousel-testimonial__name">John H. Smith</div>
-                            <div class="carousel-testimonial__title">Creative Artist</div>
-                        </div>
-                        <!-- /.col-md-8 col-lg-9 -->
-                    </div>
-                    <!-- /.row -->
-                </div>
-                <!-- /.carousel-item -->
-
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-7 col-md-4 col-lg-3 mx-auto mb-3 mb-md-0 d-block">
-                            <div class="carousel__thumb">
-                                <figure class="image image-1by1">
-                                    <img src="https://placehold.it/300" alt="placeholder">
-                                </figure>
-                            </div>
-                        </div>
-                        <!-- /.col-md-4 col-lg-3 -->
-                        <div class="col-md-8 col-lg-9">
-                            <div class="wysiwyg">
-                                <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
-                            </div>
-                            <!-- /.wysiwyg -->
-                            <div class="carousel-testimonial__name">John H. Smith</div>
-                            <div class="carousel-testimonial__title">Creative Artist</div>
+                            <div class="carousel-testimonial__name">Alex Hvostik</div>
+                            <div class="carousel-testimonial__title">Business Intelligence</div>
                         </div>
                         <!-- /.col-md-8 col-lg-9 -->
                     </div>
