--- a/src/njk/templates/partials/component/feed-events.njk
+++ b/src/njk/templates/partials/component/feed-events.njk
@@ -1,18 +1,55 @@
-<ul class="links-feed">
-    {% for i in range(0,2) %}
-    <li>
-        <a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
-            <h3 class="links-feed__title">Title for Event</h3>
-            <span class="font-weight-bold">Friday, June 23</span>
-            <span>at 12 PM</span>
-        </a>
-    </li>
-    <li>
-        <a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
-            <h3 class="links-feed__title">A bit Longer Title for an Event</h3>
-            <span class="font-weight-bold">Wednesday, September 13</span>
-            <span>at 4 PM</span>
-        </a>
-    </li>
-    {% endfor %}
-</ul>
+<div class="row">
+	<div class="col-md-6">
+		<ul class="links-feed">
+			<li>
+				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
+					<h3 class="links-feed__title">Health Coach</h3>
+					<span class="font-weight-bold">Tuesday, January 9</span>
+					<span>at 7:00 p.m.</span>
+				</a>
+			</li>
+			<li>
+				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
+					<h3 class="links-feed__title">Digital Photography</h3>
+					<span class="font-weight-bold">Thursday, January 11</span>
+					<span>at 7:00 p.m.</span>
+				</a>
+			</li>
+			<li>
+				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
+					<h3 class="links-feed__title">Fundraising</h3>
+					<span class="font-weight-bold">Tuesday, February 6</span>
+					<span>at 7:00 p.m.</span>
+				</a>
+			</li>
+		</ul>
+	</div>
+	<!-- /.-col-md-6 -->
+	<div class="col-md-6">
+		<ul class="links-feed">
+			<li>
+				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
+					<h3 class="links-feed__title">Au Pair</h3>
+					<span class="font-weight-bold">Wednesday, February 21</span>
+					<span>at 7:00 p.m.</span>
+				</a>
+			</li>
+			<li>
+				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
+					<h3 class="links-feed__title">Essentials of HR Management</h3>
+					<span class="font-weight-bold">Thursday, March 8</span>
+					<span>at 7:00 p.m.</span>
+				</a>
+			</li>
+			<li>
+				<a class="links-feed__link card-link-arrow card-link-arrow-right" href="#">
+					<h3 class="links-feed__title">Essentials of HR Management</h3>
+					<span class="font-weight-bold">Friday, March 30</span>
+					<span>at 7:00 p.m.</span>
+				</a>
+			</li>
+		</ul>
+	</div>
+	<!-- /.-col-md-6 -->
+</div>
+<!-- /.row -->
