--- a/src/njk/templates/partials/component/feed-news.njk
+++ b/src/njk/templates/partials/component/feed-news.njk
@@ -1,18 +1,16 @@
-<div class="card-links">
-
-    <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
-        <h3 class="card-links__title">Title of news article</h3>
-        <div class="wysiwyg">
-            <p>{% include "partials/wysiwyg/sentence-sm.njk" %}</p>
-        </div>
-        <div class="btn btn-sm btn-primary mb-2">Read more about...</div>
-    </a>
-    <a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
-        <h3 class="card-links__title">A much longer Title for a news article</h3>
-        <div class="wysiwyg">
-            <p>{% include "partials/wysiwyg/sentence-sm.njk" %}</p>
-        </div>
-    </a>
-
+<div class="row">
+	<div class="col-md-6">
+		<div class="card-links">
+			<a class="card-links__link card-link-arrow card-link-arrow-bottom" href="#">
+				<h3 class="card-links__title">New Half-Day Workshops</h3>
+				<div class="wysiwyg">
+					<p>Our new lineup of half-day workshops includes coaching, delegating, Microsoft Excel, leadership and other management/supervisory skills courses.</p>
+				</div>
+				<div class="btn btn-primary mb-2">All Half-Day Workshops</div>
+			</a>
+		</div>
+		<!-- /.card-links -->
+	</div>
+	<!-- /.-col-sm-6 -->
 </div>
-<!-- /.card-links -->
+<!-- /.row -->
