--- a/src/njk/templates/partials/component/stats-col.njk
+++ b/src/njk/templates/partials/component/stats-col.njk
@@ -1,16 +1,41 @@
 <div class="stats stats-col">
     <div class="row">
-        {% for i in range(0,4) %}
         <div class="col-sm-6 col-md-12 col-lg-6">
             <div class="stats__item">
                 <img class="stats__icon" src="https://placehold.it/50" alt="" />
-                <div class="stats__bold">Highest Rankings</div>
-                <div class="stats__text">{% include "partials/wysiwyg/sentence-sm.njk" %}</div>
+                <div class="stats__bold">Half-day Workshops</div>
+                <div class="stats__text">A new lineup of workshops that pack a big punch in half the time</div>
             </div>
             <!-- /.stats__item -->
         </div>
         <!-- /.col-sm-6 .col-md-12 .col-lg-6 -->
-        {% endfor %}
+		<div class="col-sm-6 col-md-12 col-lg-6">
+            <div class="stats__item">
+                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <div class="stats__bold">Certificate Programs</div>
+                <div class="stats__text">Learn a skill in-depth to augment or change your career</div>
+            </div>
+            <!-- /.stats__item -->
+        </div>
+        <!-- /.col-sm-6 .col-md-12 .col-lg-6 -->
+		<div class="col-sm-6 col-md-12 col-lg-6">
+            <div class="stats__item">
+                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <div class="stats__bold">Professional Development</div>
+                <div class="stats__text">Technology, design, management, and communications courses that build skills</div>
+            </div>
+            <!-- /.stats__item -->
+        </div>
+        <!-- /.col-sm-6 .col-md-12 .col-lg-6 -->
+		<div class="col-sm-6 col-md-12 col-lg-6">
+            <div class="stats__item">
+                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <div class="stats__bold">OLLI</div>
+                <div class="stats__text">Learning doesn’t stop at retirement either; courses to enrich the mind, body and soul</div>
+            </div>
+            <!-- /.stats__item -->
+        </div>
+        <!-- /.col-sm-6 .col-md-12 .col-lg-6 -->
     </div>
     <!-- /.row -->
 </div>
