--- a/src/njk/templates/partials/component/stats-row.njk
+++ b/src/njk/templates/partials/component/stats-row.njk
@@ -1,21 +1,41 @@
 <!-- Quick Stats -->
 <div class="stats stats-row">
     <div class="row">
-        <div class="col-md-3">
-            <h2 class="heading">Accessible. Engaging. Affordable.</h2>
+        <div class="col-lg-3 mb-3 mb-lg-0">
+            <h2 class="heading text-center text-lg-left">
+				Comprehensive.<br>
+				Accessible.<br>
+				Reputable.
+			</h2>
         </div>
         <!-- /.col-md-3 -->
-        {% for i in range(0,3) %}
-        <div class="col-sm-4 col-md-3">
+        <div class="col-sm-4 col-lg-3">
             <div class="stats__item">
                 <img class="stats__icon" src="https://placehold.it/50" alt="" />
-                <div class="stats__bold">452</div>
-                <div class="stats__text">Courses</div>
+                <div class="stats__bold">515</div>
+                <div class="stats__text">Classes</div>
             </div>
             <!-- /.stats_item -->
         </div>
         <!-- /.col-sm-4 .col-md-3 -->
-        {% endfor %}
+		<div class="col-sm-4 col-lg-3">
+            <div class="stats__item">
+                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <div class="stats__bold">20k+</div>
+                <div class="stats__text">Alumni</div>
+            </div>
+            <!-- /.stats_item -->
+        </div>
+        <!-- /.col-sm-4 .col-md-3 -->
+		<div class="col-sm-4 col-lg-3">
+            <div class="stats__item">
+                <img class="stats__icon" src="https://placehold.it/50" alt="" />
+                <div class="stats__bold">XX</div>
+                <div class="stats__text">Certificate Courses</div>
+            </div>
+            <!-- /.stats_item -->
+        </div>
+        <!-- /.col-sm-4 .col-md-3 -->
     </div>
     <!-- /.row -->
 </div>
