--- a/src/njk/templates/partials/global/footer.njk
+++ b/src/njk/templates/partials/global/footer.njk
@@ -34,11 +34,36 @@
             <div class="col-md-6">
 
                 <ul class="footer__nav">
-                    {% for i in range(0,10) %}
                     <li class="footer__nav-item">
-                        <a href="#" class="footer__nav-link">Footer Link Item</a>
-                    </li>
-                    {% endfor %}
+                        <a href="#" class="footer__nav-link">Courses</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">Certificate Programs</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">Events</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="about.html" class="footer__nav-link">About</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">Contact</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">Student Login</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">Instructor Login</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">Policies & Procedures</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">OLLI</a>
+					</li>
+					<li class="footer__nav-item">
+                        <a href="#" class="footer__nav-link">Military</a>
+					</li>
                 </ul>
 
             </div>
@@ -62,10 +87,10 @@
             <!-- /.col-md-6 -->
             <div class="col-md-6">
 
-                <div class="text-right">2018 All rights reserved. Emory University.</div>
+                <div class="text-md-right">2018 All rights reserved. Emory University.</div>
 
-                <div class="text-right d-block d-lg-none">
-                    <a href="#">Back to top</a>
+                <div class="mt-4 text-md-right d-block d-lg-none">
+                    <a href="#" class="btn btn-dark">Back to top</a>
                 </div>
 
             </div>
