--- a/src/njk/templates/partials/hero/hero-interior.njk
+++ b/src/njk/templates/partials/hero/hero-interior.njk
@@ -1,6 +1,6 @@
 <div class="hero hero-interior">
     <div class="container d-flex h-100 flex-column justify-content-center">
-        <h1 class="hero__heading" id="page-title">{{ pageTitle}} - Hero Component</h1>
+        <h1 class="hero__heading" id="page-title">{{ pageTitle}}</h1>
     </div>
     <!-- /.container -->
 </div>
