--- a/src/njk/pages/courses.njk
+++ b/src/njk/pages/courses.njk
@@ -1,6 +1,6 @@
 {% extends "layout.njk" %} 
-{% set pageTitle = 'Interior with Sidebar' %}
-{% set pageType = 'Layout' %}
+{% set pageTitle = 'Courses' %}
+{% set pageType = 'Courses' %}
 {% block head %}
 <title>{{ pageTitle }} | {{ siteName }}</title>
 {% endblock %} 
