--- a/src/njk/pages/index.njk
+++ b/src/njk/pages/index.njk
@@ -22,37 +22,35 @@
         <div class="wrapper bg-fractal-frame">
             <div class="container">
                 <div class="text-center pb-5">
-                    <h2 class="heading">Card Icons Component</h2>
+                    <h2 class="heading">Proven Value to Our Students</h2>
                 </div>
                 {% include "partials/component/card-icons.njk" %}
             </div>
         </div>
     </section>
 
-    <section class="gradient-hz-blue pinch pinch-blue" aria-label="Card links">
+    <section class="gradient-hz-blue pinch pinch-blue" aria-label="Courses and programs">
         <div class="bg-effects">
             <div class="container">
                 <div class="text-center py-5">
-                    <h2 class="heading text-white mb-0">Card Links Component</h2>
+                    <h2 class="heading text-white mb-0">Browse Our Courses and Programs</h2>
                 </div>
                 {% include "partials/component/card-links.njk" %}     
             </div>
         </div>
     </section>
 
-    <section aria-label="Photo overlap, Events feed, News feed">
+    <section aria-label="Overview, info sessions feed, news feed">
         <div class="wrapper wrapper-overlap">
-            <div class="container">
+            <div class="container mt-3">
                 <div class="row">
                     <div class="col-lg-6 order-2">
-                        <h2 class="heading">Section with Photo Overlap Component</h2>
+                        <h2 class="heading">Discover a New You</h2>
                         <div class="wysiwyg">
-                            <p>{% include "partials/wysiwyg/sentence-sm.njk" %}</p>
-                            <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
-                            <p>{% include "partials/wysiwyg/sentence-md.njk" %}</p>
+                            <p>Learn a new language, develop a finer palate for wine or hone work skills by mastering Excel or web programming. If you’re 50 or older, attend one or more of our XX OLLI classes to learn and meet new people. Enroll in certificate courses at your own pace to bolster your prospects at work or in pursuit of a new job. We also tailor onsite professional development classes for our corporate clients. Whether it’s for your own enjoyment or career needs, you’ll find a course that fits at ECE.</p>
                         </div>
                         <!-- /.wysiwyg -->
-                        <a href="#" class="btn btn-primary">Call to action</a>
+                        <a href="about.html" class="btn btn-primary">About ECE</a>
                     </div>
                     <!-- /.col-lg-6 -->
 
@@ -63,33 +61,16 @@
                 </div>
                 <!-- /.row -->
 
-                <hr class="my-5">
+				<div class="my-5">
+					<h2 class="heading mb-3">Info Sessions</h2>
+					{% include "partials/component/feed-events.njk" %}
+					<a href="#" class="btn btn-primary mt-4 mt-md-0">All Info Sessions</a>
+				</div>
 
-                <h2 class="heading mb-3">Events feed component</h2>
-                <div class="row">
-                    {% for i in range(0,2) %}
-                    <div class="col-md-6">
-                        {% include "partials/component/feed-events.njk" %}
-                    </div>
-                    <!-- /.-col-md-6 -->
-                    {% endfor %}
-                </div>
-                <!-- /.row -->
-                <a href="#" class="btn btn-primary mt-4 mt-md-0">View all events</a>
-
-                <hr class="my-5">
-
-                <h2 class="heading mb-3">News feed component</h2>
-                <div class="row">
-                    {% for i in range(0,2) %}
-                    <div class="col-sm-6">
-                        {% include "partials/component/feed-news.njk" %}
-                    </div>
-                    <!-- /.-col-sm-6 -->
-                    {% endfor %}
-                </div>
-                <!-- /.row -->
-                <a href="#" class="btn btn-primary">View all news</a>
+				<div class="mt-5">
+					<h2 class="heading mb-3">Latest News</h2>
+					{% include "partials/component/feed-news.njk" %}
+				</div>
 
             </div>
             <!-- /.container -->
