--- a/src/njk/templates/partials/component/accordion.njk
+++ b/src/njk/templates/partials/component/accordion.njk
@@ -1,70 +1,359 @@
 <div class="accordion" id="accordion">
-
-    <div class="card">
-        <div class="card-header" id="headingOne">
-            <div class="h5 mb-0">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Accordion item #1</button>
-            </div>
-        </div>
-        <!-- /.card-header -->
-        <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body">
-                <div class="wysiwyg">
-                    <p>{% include "partials/wysiwyg/sentence-sm.njk" %}</p>
-                    <h3>Heading level three</h3>
-                    <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
-                    <h4>Heading level four</h4>
-                    <p>{% include "partials/wysiwyg/sentence-md.njk" %}</p>
-                </div>
-                <!-- /.wysiwyg -->
-            </div>
-            <!-- /.card-body -->
-        </div>
-        <!-- /.collapse -->
-    </div>
-    <!-- /.card -->
-
-    <div class="card">
-        <div class="card-header" id="headingTwo">
-            <div class="h5 mb-0">
-                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">{% include "partials/wysiwyg/sentence-md.njk" %}</button>
-            </div>
-        </div>
-        <!-- /.card-header -->
-        <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
-            <div class="card-body">
-                <div class="wysiwyg">
-                    <p>{% include "partials/wysiwyg/sentence-sm.njk" %}</p>
-                    <p>{% include "partials/wysiwyg/sentence-md.njk" %}</p>
-                </div>
-                <!-- /.wysiwyg -->
-            </div>
-            <!-- /.card-body -->
-        </div>
-        <!-- /.collapse -->
-    </div>
-    <!-- /.card -->
-
-    <div class="card">
-        <div class="card-header" id="headingThree">
-            <div class="h5 mb-0">
-                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">{% include "partials/wysiwyg/sentence-sm.njk" %}</button>
-            </div>
-        </div>
-        <!-- /.card-header -->
-        <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
-            <div class="card-body">
-                <div class="wysiwyg">
-                    <p>{% include "partials/wysiwyg/sentence-lg.njk" %}</p>
-                    <p>{% include "partials/wysiwyg/sentence-md.njk" %}</p>
-                </div>
-                <!-- /.wysiwyg -->
-            </div>
-            <!-- /.card-body -->
-        </div>
-        <!-- /.collapse -->
-    </div>
-    <!-- /.card -->
-
+	<div class="card">
+		<div class="card-header" id="headingOne">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Why do I need to create an account, and how do I create one?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Creating an account allows you to view personalized information relevant to your student experience at ECE. You can quickly create an account <a href="#">here</a>.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingTwo">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">How do I find the location and/or schedule of my class, print my certificate of completion, or find a listing of classes that I have completed?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Log into your <a href="#">student account</a> and click on your student profile &gt;&gt;&gt; main menu tabs to see your personal information (you may have to scroll down.)</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingThree">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How can I find more information about an instructor?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>For certificate programs, you can click on the instructor tab on the left hand navigation menu. For open enrollment classes currently available for registration, links to the individual instructors&#8217; biographies can be found in the search results for a particular subject or in the course collection displays throughout our website.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingFour">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">How do I purchase a class for someone else?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseFour" aria-labelledby="headingFour" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Please call <a href="tel:404-727-6000">404-727-6000</a> and an Enrollment Services Associate will be happy to assist with this process.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingFive">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">How do I get a receipt for a class that I purchased?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseFive" aria-labelledby="headingFive" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Confirmations and invoice receipts are automatically emailed upon enrollment; if you do not receive yours, please email <a href="mailto:learn@emory.edu">learn@emory.edu</a> for assistance.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingSix">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Does Emory Continuing Education offer any online courses?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseSix" aria-labelledby="headingSix" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Emory Continuing Education currently offers a number of hybrid courses combining classroom and online education; please check individual course descriptions to see additional details.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingSeven">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">How do I select electives if I am enrolled in a certificate program?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseSeven" aria-labelledby="headingSeven" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Please log into your ECE <a href="#">student account</a> and click on the <strong>Academics</strong> tab to wait for your Applications, Enrollments, and Upcoming Courses to display. You may now register for courses required to complete the certificate. If a program and/or course does not appear open for enrollment, please contact your student advisor or call <a href="tel:404-727-6000">404-727-6000</a> for more details.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingEight">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">Will I get credit towards my degree if I take these classes?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseEight" aria-labelledby="headingEight" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>At this time, ECE courses offer continuing education units, but not credit towards a degree.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingNine">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">I am a CDC employee. How can I use my ILA to pay for my classes?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseNine" aria-labelledby="headingNine" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Please contact Gerald Clay at <a href="tel:404-727-9543">404-727-9543</a> or <a href="mailto:gclay@emory.edu">gclay@emory.edu</a> for details regarding this method of payment.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingTen">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">I am a veteran, how can I find information on which classes I can attend with my VA benefits?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseTen" aria-labelledby="headingTen" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Please visit <a href="#">www.ece.emory.edu/military/</a> for details, or contact Gerald Clay at <a href="tel:404-727-9543">404-727-9543</a> / <a href="mailto:gclay@emory.edu">gclay@emory.edu</a>.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingEleven">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseEleven" aria-expanded="false" aria-controls="collapseEleven">What are the steps to become an instructor?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseEleven" aria-labelledby="headingEleven" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<ul>
+						<li>If you wish to submit a proposal to be considered for inclusion in our program, please email a current CV or resume, including the <span>topic</span> for your proposal, to <a href="mailto:learn@emory.edu">learn@emory.edu</a>.</li>
+					</ul>
+					<ul>
+						<li>Should your proposal topic be accepted, you will be contacted by a member of the programming team who will work with you through the next steps of the proposal process at ECE.</li>
+					</ul>
+					<ul>
+						<li>Please allow up to 4 weeks for initial response.</li>
+					</ul>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingTwelve">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">How can I purchase a class using a Smartkey?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseTwelve" aria-labelledby="headingTwelve" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Please complete the following <a href="#">form</a> and follow instructions.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingThirteen">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">How do I get my Emory Staff/Employee Discount?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseThirteen" aria-labelledby="headingThirteen" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Emory faculty, staff and students can visit <a href="#">this page</a> for the current promo codes.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingFourteen">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFourteen" aria-expanded="false" aria-controls="collapseFourteen">Do I have to be an Emory student or Alum to attend the classes?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseFourteen" aria-labelledby="headingFourteen" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>All classes and certificate programs are open to the public.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingFifteen">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">Where is the schedule and/or price for certificate?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseFifteen" aria-labelledby="headingFifteen" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Cohort program prices are generally available by clicking on the Curriculum tab on the left navigation menu for each certificate. For open enrollment certificate programs, your costs may vary depending on your selection of core and elective courses.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingSixteen">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">What Au Pair electives are available?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseSixteen" aria-labelledby="headingSixteen" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Please visit the <a href="#">Au Pair page</a> for more details and to browse current electives.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingSeventeen">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseSeventeen" aria-expanded="false" aria-controls="collapseSeventeen">When will the next ECE catalog be available?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseSeventeen" aria-labelledby="headingSeventeen" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Winter/Spring 2016 catalogs are currently scheduled to be mailed in late December/early January 2016.</p>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
+	<div class="card">
+		<div class="card-header" id="headingEighteen">
+			<div class="h5 mb-0">
+				<button class="btn btn-link" data-toggle="collapse" data-target="#collapseEighteen" aria-expanded="false" aria-controls="collapseEighteen">What are the OLLI dates for 2017?</button>
+			</div>
+		</div>
+		<!-- /.card-header -->
+		<div class="collapse" id="collapseEighteen" aria-labelledby="headingEighteen" data-parent="#accordion">
+			<div class="card-body">
+				<div class="wysiwyg">
+					<p>Osher Lifelong Learning Institute (OLLI - classes designed for students ages 50 and older) sessions for 2017 are currently scheduled as follows:</p>
+					<ul>
+						<li>Winter 2017: Jan 9 - March 2, 2017</li>
+						<li>Spring 2017: April 3 - May 25, 2017</li>
+						<li>Summer 2017: July 10 - August 17, 2017</li>
+						<li>Fall 2017: September 11 - November 2, 2017</li>
+					</ul>
+				</div>
+				<!-- /.wysiwyg -->
+			</div>
+			<!-- /.card-body -->
+		</div>
+		<!-- /.collapse -->
+	</div>
+	<!-- /.card -->
 </div>
 <!-- /.accordion -->
