--- a/src/njk/templates/partials/hero/hero-home.njk
+++ b/src/njk/templates/partials/hero/hero-home.njk
@@ -5,19 +5,19 @@
             <div class="col-md-6">
 
                 <h1 class="hero__heading" id="page-title">
-                    <span class="hero__heading-primary">{{ pageTitle}} - Hero Element</span>
-                    <span class="hero__heading-secondary">Highlight <span class="font-italic">This</span> Text</span>
+                    <span class="hero__heading-primary">Build Skills</span>
+                    <span class="hero__heading-secondary">for <span class="font-italic">Your</span> Future</span>
                 </h1>
 
                 <div class="hero__lead">
                     <div class="wysiwyg">
-                        <p>{% include "partials/wysiwyg/sentence-md.njk" %}</p>
+                        <p>ECE offers a wide range of certificate programs and open enrollment courses — including online and hybrid options — for both professional development as well as personal enrichment.</p>
                     </div>
                     <!-- /.wysiwyg -->
                 </div>
                 <!-- /.hero__lead -->
-                <a href="#" class="btn btn-block btn-lg btn-secondary">Call to Action</a>
-                <a href="#" class="btn btn-block btn-lg btn-primary">Call to Action with longer text</a>
+                <a href="#" class="btn btn-block btn-lg btn-secondary">Browse Our Courses</a>
+                <a href="#" class="btn btn-block btn-lg btn-primary">RSVP to an Upcoming Info Session/Webinar</a>
             </div>
             <!-- /.col-md-6 -->
         </div>
